# SonySmartControl

./: .cursorrules  .gitignore  LICENSE  ReadMe.md
.obsidian/: workspace.json
CrSDK_v2.01.00_20260203a_Win64/SimpleCli/: CMakeLists.txt
SonyCrBridge/: CMakeLists.txt  CMakeSettings.json  build-windows.ps1
SonyCrBridge/include/: SonyCrBridgeApi.h
SonyCrBridge/src/: SonyCrBridge.cpp
SonySmartControl/: App.axaml  App.axaml.cs  Program.cs  SonySmartControl.csproj  ViewLocator.cs  app.manifest
SonySmartControl/Behaviors/: CaptureHoldButtonBehavior.cs  ComboBoxWheelToParentScrollBehavior.cs  FilmstripBarWheelBehavior.cs  FilmstripHostWidthSyncBehavior.cs  FocusHoldButtonBehavior.cs  PreviewAreaBehaviors.cs
SonySmartControl/Controls/: AfFocusFramesOverlay.cs  CompositionGuideOverlay.cs  FilmstripPhotoInfoTip.axaml  FilmstripPhotoInfoTip.axaml.cs  FilmstripPhotoItem.axaml  FilmstripPhotoItem.axaml.cs  FilmstripPhotosHost.axaml  FilmstripPhotosHost.axaml.cs  HistogramMiniControl.cs  LuminanceHistogramOverlay.cs  PhotoPanZoomViewer.axaml  PhotoPanZoomViewer.axaml.cs  PreviewWorkspace.axaml  PreviewWorkspace.axaml.cs  RemoteSidebarPanel.axaml  RemoteSidebarPanel.axaml.cs  WheelPickerCombo.axaml  WheelPickerCombo.axaml.cs
SonySmartControl/Helpers/: AppIconUris.cs  DiskImagePreviewLoader.cs  EmbeddedJpegPreviewLoader.cs  ExifOrientationNormalizer.cs  FocusReticleLayout.cs  HistogramLuminance.cs  PhotoExifReader.cs  PreviewHitTest.cs  ShutdownTrace.cs  UniformImageDestRect.cs  UnsupportedFormatThumbnailFactory.cs  WindowsShellImageDecoder.cs
SonySmartControl/Interop/: CrSdkCommandIds.cs  CrSdkCommandParam.cs  CrSdkControlCodes.cs  CrSdkDataType.cs  CrSdkDevicePropertyCodes.cs  CrSdkDispMode.cs  CrSdkExposureFormatting.cs  CrSdkFileType.cs  CrSdkFunctionOfRemoteTouch.cs  CrSdkLiveViewFocusFrame.cs  CrSdkLockIndicator.cs  CrSdkPriorityKeySettings.cs  SonyCrSdk.cs  (+11 more)
(+1128 files in other folders)
